--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <tfoot>
                     <!-- Footer della tabella -->
                     <tr>    
-                        <td>Totale</td>
+                        <td colspan ="2"> Totale</td>
                         <td></td>
                         <td>360&euro;</td>
                     </tr>
